# internal/db/models.go
@@ -1,0 +1,65 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package db
+
+import (
+	"database/sql"
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type AuthUser struct {
+	ID           uuid.UUID   `json:"id"`
+	Email        interface{} `json:"email"`
+	PasswordHash string      `json:"password_hash"`
+	IsActive     bool        `json:"is_active"`
+	CreatedAt    time.Time   `json:"created_at"`
+	UpdatedAt    time.Time   `json:"updated_at"`
+}
+
+type OauthAuthorizationCode struct {
+	Code                string         `json:"code"`
+	UserID              uuid.UUID      `json:"user_id"`
+	ClientID            uuid.UUID      `json:"client_id"`
+	RedirectUri         string         `json:"redirect_uri"`
+	Scope               []string       `json:"scope"`
+	CodeChallenge       sql.NullString `json:"code_challenge"`
+	CodeChallengeMethod sql.NullString `json:"code_challenge_method"`
+	ExpiresAt           time.Time      `json:"expires_at"`
+	ConsumedAt          sql.NullTime   `json:"consumed_at"`
+	CreatedAt           time.Time      `json:"created_at"`
+}
+
+type OauthClient struct {
+	ID             uuid.UUID      `json:"id"`
+	ClientID       string         `json:"client_id"`
+	ClientSecret   sql.NullString `json:"client_secret"`
+	Name           string         `json:"name"`
+	RedirectUris   []string       `json:"redirect_uris"`
+	AllowedScopes  []string       `json:"allowed_scopes"`
+	IsConfidential bool           `json:"is_confidential"`
+	CreatedAt      time.Time      `json:"created_at"`
+	UpdatedAt      time.Time      `json:"updated_at"`
+}
+
+type OauthToken struct {
+	ID               uuid.UUID      `json:"id"`
+	AccessToken      sql.NullString `json:"access_token"`
+	RefreshToken     sql.NullString `json:"refresh_token"`
+	UserID           uuid.NullUUID  `json:"user_id"`
+	ClientID         uuid.UUID      `json:"client_id"`
+	Scope            []string       `json:"scope"`
+	TokenType        string         `json:"token_type"`
+	ExpiresAt        time.Time      `json:"expires_at"`
+	RefreshExpiresAt sql.NullTime   `json:"refresh_expires_at"`
+	RevokedAt        sql.NullTime   `json:"revoked_at"`
+	CreatedAt        time.Time      `json:"created_at"`
+}
+
+type SchemaMigration struct {
+	Version int64 `json:"version"`
+	Dirty   bool  `json:"dirty"`
+}
